# CHIP-8pp

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  run_container.sh
include/: chip8.hpp  constants.hpp  cpu.hpp  masks.hpp  random.hpp  sdl_interface.hpp  sound_related.hpp
src/: chip8.cpp  cpu.cpp  emulator.cpp  sdl_interface.cpp
